--- a/public/about/index.html
+++ b/public/about/index.html
@@ -7,8 +7,8 @@
 
         <title>about &middot; Rodney Harrison QC</title>
         <link rel='stylesheet' href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600' type='text/css'>
-        <link rel="stylesheet" href="http://replace-this-with-your-hugo-site.com//libraries/normalize.3.0.1.css" />
-        <link rel="stylesheet" href="http://replace-this-with-your-hugo-site.com//css/liquorice.css" />
+        <link rel="stylesheet" href="http://rodneyharrisonqc.com//libraries/normalize.3.0.1.css" />
+        <link rel="stylesheet" href="http://rodneyharrisonqc.com//css/liquorice.css" />
         <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-144-precomposed.png" sizes="144x144" />
         <link rel="alternate" href="" type="application/rss+xml" title="Rodney Harrison QC" />
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="sixteen columns">
                 <div class="li-brand li-left">
-                <a href="http://replace-this-with-your-hugo-site.com/">Rodney Harrison QC</a></div>
+                <a href="http://rodneyharrisonqc.com/">Rodney Harrison QC</a></div>
                 <div class="li-menu li-right">
                     <span class="li-menu-icon" onclick="javascript:toggle('menu');">&#9776;</span>
                     <ul id="menu2" class="li-menu-items">
@@ -82,7 +82,7 @@
                 <div class="li-pagination-previous">
                     
                         Later article<br />
-                        <a href="http://replace-this-with-your-hugo-site.com/cv/cv/"> cv</a>
+                        <a href="http://rodneyharrisonqc.com/cv/cv/"> cv</a>
                     
                 </div>
             </div>
