--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
 <header>
     <div class="container">
         <div class="intro-text">
-            <div class="intro-lead-in">
+            <div class="intro-lead-in row">
             	<a href="#about">Rodney Harrison QC
             	</a>
             	</div>
